--- a/resources/index.html
+++ b/resources/index.html
@@ -9,7 +9,9 @@
 				xhr.onreadystatechange= function() {
 					if (this.readyState!==4) return;
 					if (this.status!==200) return; // or whatever error handling you want
-					document.getElementById('log-container').innerHTML= this.responseText;
+					var container = document.getElementById('log-container');
+					container.innerHTML= this.responseText;
+					container.scrollTop = objDiv.scrollHeight;
 				};
 				xhr.send();
 			}, 1000);
@@ -30,6 +32,7 @@
 			#controls {
 				display: inline-block;
 				margin: 15px 0;
+				font-size: 14px;
 			}
 			#controls button {
 				margin: 20px 0;
@@ -48,6 +51,8 @@
 				border-radius: 5px;
 				background: white;
 				text-align: left;
+				overflow-y: auto;
+				overflow-x: hidden;
 			}
 		</style>
 	</head>
