Some formatting changes

--- a/resources/index.html
+++ b/resources/index.html
@@ -28,18 +28,19 @@
 			html {
 				background: lightsteelblue;
 				text-align: center;
+				font-family: "Arial", "Helvetica", sans-serif;
 			}
 			#controls {
 				display: inline-block;
 				margin: 15px 0;
-				font-size: 14px;
 			}
 			#controls button {
-				margin: 20px 0;
+				margin: 0 10px;
 				padding: 10px 20px;
 				border: solid 1px lightgray;
 				background: white;
 				border-radius: 5px;
+				font-size: 14px;
 			}
 			#log-container {
 				float: left;
@@ -53,6 +54,7 @@
 				text-align: left;
 				overflow-y: auto;
 				overflow-x: hidden;
+				font-size: 13px;
 			}
 		</style>
 	</head>
