--- a/resources/index.html
+++ b/resources/index.html
@@ -43,28 +43,31 @@
 				box-sizing: border-box;
 			}
 			html {
-				background: lightsteelblue;
+				background: #222;
+				color: #EEE;
 				text-align: center;
 				font-family: "Arial", "Helvetica", sans-serif;
 			}
 			h1 {
 				margin-top: 30px;
+				font-size: 40px;
 			}
 			label {
 				float: right;
-				margin-right: 5%;
+				margin: 10px 5% 10px 0;
 			}
 			#controls {
 				display: inline-block;
-				margin: 15px 0;
+				margin: 15px 0 40px 0;
 			}
 			#controls button {
 				margin: 0 10px;
 				padding: 10px 20px;
 				border: solid 1px lightgray;
-				background: white;
+				background: #EEE;
 				border-radius: 5px;
 				font-size: 14px;
+				cursor: pointer;
 			}
 			#log-container {
 				width: 90%;
@@ -73,7 +76,8 @@
 				border: solid 2px gray;
 				padding: 10px 15px;
 				border-radius: 5px;
-				background: white;
+				background: #EEE;
+				color: black;
 				text-align: left;
 				overflow-y: auto;
 				overflow-x: hidden;
